--- a/0 - START CODE/CSS/play.css
+++ b/0 - START CODE/CSS/play.css
@@ -66,3 +66,40 @@ body {
   padding: 20px;
   font-size: 300%;
 }
+
+.progress-wrapper {
+  position: relative;
+  height: 30px;
+  margin-top: 20px;
+}
+
+.progress-bar {
+  height: 100%;
+  width: 100%;
+  border-radius: 20px;
+  background-color: rgba(37, 99, 235, 0.2);
+  overflow: hidden;
+}
+
+.progress-fill {
+  height: 100%;
+  width: 0%;
+  background: linear-gradient(90deg, #2563EB, #BB80FF);
+  box-shadow: 0 0 10px rgba(37, 99, 235, 0.5);
+  border-radius: 20px;
+  transition: width 0.4s ease;
+}
+
+.progress-text {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  padding-top: 6.5px;
+  left: 0;
+  transform: translateY(-50%);
+  text-align: center;
+  font-weight: bold;
+  color: black;
+  pointer-events: none;
+  font-size: 16px;
+}
